--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 
         <!-- Link to the stylesheet -->
         <link rel="stylesheet" href="/style.css" />
+
+        <!-- Link to Fontawesome icons -->
+        <script src="https://kit.fontawesome.com/dbf182c521.js" crossorigin="anonymous"></script>
         <title>Vini Mini chatroom</title>
     </head>
     <body>
@@ -17,7 +20,7 @@
                 <ul></ul>
                 <form>
                     <input type="text" autocomplete="off" />
-                    <button><span>Send</span></button>
+                    <button><i class="fa-solid fa-paper-plane" style="color: #ffffff"></i></button>
                 </form>
             </section>
         </main>
